--- a/BloodMNIST.ipynb
+++ b/BloodMNIST.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "id": "BHLGpHlH8fub",
     "pycharm": {
@@ -40,30 +40,25 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: medmnist in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.0.2)\n",
-      "Requirement already satisfied: fire in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from medmnist) (0.4.0)\n",
-      "Requirement already satisfied: numpy in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from medmnist) (1.21.5)\n",
       "Requirement already satisfied: torchvision in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from medmnist) (0.11.2)\n",
       "Requirement already satisfied: scikit-learn in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from medmnist) (1.0.2)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from medmnist) (4.62.3)\n",
       "Requirement already satisfied: Pillow in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from medmnist) (9.0.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from medmnist) (1.21.5)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from medmnist) (4.62.3)\n",
       "Requirement already satisfied: pandas in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from medmnist) (1.4.0)\n",
-      "Requirement already satisfied: torch in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from medmnist) (1.10.1)\n",
+      "Requirement already satisfied: fire in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from medmnist) (0.4.0)\n",
       "Requirement already satisfied: scikit-image in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from medmnist) (0.19.1)\n",
-      "Requirement already satisfied: termcolor in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from fire->medmnist) (1.1.0)\n",
+      "Requirement already satisfied: torch in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from medmnist) (1.10.1)\n",
       "Requirement already satisfied: six in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from fire->medmnist) (1.16.0)\n",
+      "Requirement already satisfied: termcolor in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from fire->medmnist) (1.1.0)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas->medmnist) (2021.3)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas->medmnist) (2.8.2)\n",
-      "Requirement already satisfied: PyWavelets>=1.1.1 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-image->medmnist) (1.2.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-image->medmnist) (21.3)\n",
       "Requirement already satisfied: tifffile>=2019.7.26 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-image->medmnist) (2022.2.9)\n",
-      "Requirement already satisfied: networkx>=2.2 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-image->medmnist) (2.6.3)\n",
       "Requirement already satisfied: scipy>=1.4.1 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-image->medmnist) (1.7.3)\n",
       "Requirement already satisfied: imageio>=2.4.1 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-image->medmnist) (2.15.0)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-learn->medmnist) (3.0.0)\n",
-      "Requirement already satisfied: joblib>=0.11 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-learn->medmnist) (1.1.0)\n",
-      "Requirement already satisfied: typing-extensions in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from torch->medmnist) (3.10.0.2)\n",
-      "Requirement already satisfied: colorama in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from tqdm->medmnist) (0.4.4)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from packaging>=20.0->scikit-image->medmnist) (3.0.6)\n"
+      "Requirement already satisfied: networkx>=2.2 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-image->medmnist) (2.6.3)\n",
+      "Requirement already satisfied: PyWavelets>=1.1.1 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-image->medmnist) (1.2.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-image->medmnist) (21.3)"
      ]
     },
     {
@@ -73,6 +68,18 @@
       "WARNING: You are using pip version 22.0.4; however, version 22.2 is available.\n",
       "You should consider upgrading via the 'c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-learn->medmnist) (3.0.0)\n",
+      "Requirement already satisfied: joblib>=0.11 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-learn->medmnist) (1.1.0)\n",
+      "Requirement already satisfied: typing-extensions in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from torch->medmnist) (3.10.0.2)\n",
+      "Requirement already satisfied: colorama in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from tqdm->medmnist) (0.4.4)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in c:\\users\\atharv_savarkar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from packaging>=20.0->scikit-image->medmnist) (3.0.6)\n"
+     ]
     }
    ],
    "source": [
@@ -81,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "id": "9NOCOzjf8fud",
     "pycharm": {
@@ -109,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "id": "0uj5U4cF8fue",
     "outputId": "9f0611fc-3996-4b22-8fc4-54abfe8dc5d5",
@@ -135,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "id": "YhPdqg6v8fug",
     "pycharm": {
@@ -157,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "id": "uhp40RPd8fuh",
     "outputId": "5928d1b0-db55-4a3e-ff98-bd16d32638da",
@@ -173,25 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading https://zenodo.org/record/5208230/files/bloodmnist.npz?download=1 to C:\\Users\\atharv_savarkar\\.medmnist\\bloodmnist.npz\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "  0%|          | 0/35461855 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "38e6bc042b1f44228b143e30e2c13c18"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Using downloaded and verified file: C:\\Users\\atharv_savarkar\\.medmnist\\bloodmnist.npz\n",
       "Using downloaded and verified file: C:\\Users\\atharv_savarkar\\.medmnist\\bloodmnist.npz\n",
       "Using downloaded and verified file: C:\\Users\\atharv_savarkar\\.medmnist\\bloodmnist.npz\n",
       "Dataset BloodMNIST (bloodmnist)\n",
@@ -268,7 +257,7 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 8,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -312,7 +301,7 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 10,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
@@ -348,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
     "id": "-dF7k4-e8fui",
     "pycharm": {
@@ -369,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "a3x82zOa8fuk",
     "pycharm": {
@@ -441,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true,
     "id": "2qa-W80-8ful",
@@ -455,9 +444,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 704/704 [01:06<00:00, 10.53it/s]\n",
-      "100%|██████████| 704/704 [01:32<00:00,  7.60it/s]\n",
-      "100%|██████████| 704/704 [01:31<00:00,  7.66it/s]\n"
+      "100%|██████████| 94/94 [00:39<00:00,  2.39it/s]\n",
+      "100%|██████████| 94/94 [00:39<00:00,  2.37it/s]\n",
+      "100%|██████████| 94/94 [00:55<00:00,  1.70it/s]\n"
      ]
     }
    ],
@@ -489,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "8Bh4DWcx8ful",
     "outputId": "c60136d0-5a54-4ce5-f891-d2addbb1ef17",
@@ -503,8 +492,8 @@
      "output_type": "stream",
      "text": [
       "==> Evaluating ...\n",
-      "train  auc: 0.967  acc:0.713\n",
-      "test  auc: 0.932  acc:0.556\n"
+      "train  auc: 0.973  acc:0.809\n",
+      "test  auc: 0.972  acc:0.807\n"
      ]
     }
    ],
